3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

doc/Developers/objects updated to better describe @match use in objects. Many
objects contain useless case handling keys like @match Hello|hello because
mapmakers do not know how @match works.  Also add mention of the limited
regular expression support that applies to match keys.
Kevin R. Bulgrien 2006-10-08

Make converters inside shops work again.
---
server/c_object.c: Sell item after dropping because converters do not accept
   unpaid items.
Andreas Kirschbaum 2006-10-08

Fix bug where in players could unequip cursed weapons by switching to a hand
to hand skill (punching, karate, etc).
--
include/define.h: Add AP_NOPRINT flag.
server/apply.c: Modify the apply_special() code to take AP_NOPRINT option,
   which as implies, causes messages not to be printed.  Used in change
   to skill_util.c, since the code thre prints better message about uequipping
   of weapon.
server/skill_util.c: Do some cleanup of unused vars in do_skill().  Modify
   attack_hth() to call apply_special() to unequip weapon (that takes care
   of checking cursed status, etc).
--
MSW 2006-10-05

server/rune.c: Fix mistake in revision 4979, causing get_rangevector to be called
    with an uninitialized env.
Alex Schultz 2006-10-04

server/c_misc.c: Fix incorrect use of FMT64 in commant_statistics().
Alex Schultz 2006-10-02

server/monster.c: Revert message formatting of NPC responses back to the
   two-line format. Fix a possible buffer overflow when players talk to
   certain NPCs.
Andreas Kirschbaum 2006-10-02

server/rune.c: Cleanup spring_trap() and clean some questionable logic.